# trestle

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PRD.md  README.md  config.example.toml  index.html  package-lock.json  package.json  providers.example.toml  research.md  routes.example.toml  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
.github/workflows/: .gitignore  ci.yml  release.yml
assets/: README.md
crates/client/: Cargo.toml
crates/client/src/: api.rs  app.rs  main.rs  ui_theme.rs
crates/client/src/pages/: dashboard.rs  logs.rs  mod.rs  providers.rs  routes.rs  settings.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  error.rs  lib.rs  types.rs
crates/server/: Cargo.toml
crates/server/src/: crud.rs  handlers.rs  lib.rs  log_store.rs  main.rs  proxy.rs  state.rs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs  tray.rs
src/components/: Sidebar.tsx
src/pages/: Dashboard.tsx  Logs.tsx  Providers.tsx  Routes.tsx  Settings.tsx
src/stores/: app.ts
