[workspace]
members = ["crates/server", "crates/client", "crates/core"]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "MIT"
authors = ["imnull"]
repository = "https://github.com/imnull/trestle"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP
axum = "0.8"
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config
config = "0.15"

# Error handling
anyhow = "1"
thiserror = "2"

# Async utilities
futures = "0.3"
async-trait = "0.1"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Directories
dirs = "6"

# Async stream
async-stream = "0.3"

# Regex
regex = "1"

# Database (optional)
rusqlite = { version = "0.33", features = ["bundled"] }

# GUI (client only)
eframe = "0.30"
egui = "0.30"
egui_extras = { version = "0.30", features = ["all_loaders"] }
