[package]
name = "trestle"
version = "1.1.0"
description = "AI 代理管理工具"
authors = ["Trestle Team"]
edition = "2021"

[lib]
name = "trestle_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

# 复用现有后端
trestle-server = { path = "../../crates/server" }
trestle-core = { path = "../../crates/core" }
