[package]
name = "trestle-client"
version.workspace = true
edition.workspace = true

[[bin]]
name = "trestle"
path = "src/main.rs"

[dependencies]
trestle-core = { path = "../core" }
trestle-server = { path = "../server" }

tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
chrono.workspace = true

# GUI
eframe.workspace = true
egui.workspace = true
egui_extras.workspace = true
once_cell = "1.20"
