[package]
name = "trestle-client"
version.workspace = true
edition.workspace = true

[[bin]]
name = "trestle"
path = "src/main.rs"

[features]
default = []
tray = ["dep:tray-item"]

[dependencies]
trestle-core = { path = "../core" }
trestle-server = { path = "../server" }

tokio.workspace = true
reqwest = { workspace = true, features = ["blocking", "json"] }
urlencoding = "2.1"
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
chrono.workspace = true
dirs = "6"

# GUI
eframe.workspace = true
egui.workspace = true
egui_extras.workspace = true
once_cell = "1.20"

# 系统托盘 (需要 Rust 1.82+)
tray-item = { version = "0.10", optional = true }
