[package]
name = "trestle-client"
version.workspace = true
edition.workspace = true

[[bin]]
name = "trestle"
path = "src/main.rs"

[features]
default = []
tray = ["dep:tray-item"]

[dependencies]
trestle-core = { path = "../core" }
trestle-server = { path = "../server" }

tokio.workspace = true
reqwest = { workspace = true, features = ["blocking", "json"] }
urlencoding = "2.1"
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
chrono.workspace = true
dirs = "6"

# GUI
eframe.workspace = true
egui.workspace = true
egui_extras.workspace = true
once_cell = "1.20"

# 日志
tracing = "0.1"
tracing-subscriber = "0.3"

# 系统托盘 (Linux 需要 libappindicator)
tray-item = { version = "0.10", optional = true, features = ["libappindicator"] }

# 信号处理
ctrlc = "3.4"
