[package]
name = "trestle-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "trestle-server"
path = "src/main.rs"

[dependencies]
trestle-core = { path = "../core" }

tokio.workspace = true
axum.workspace = true
axum-extra.workspace = true
tower.workspace = true
tower-http.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
futures.workspace = true
config.workspace = true
uuid.workspace = true
chrono.workspace = true
async-stream.workspace = true
