[package]
name = "trestle-server"
version.workspace = true
edition.workspace = true

[lib]
name = "trestle_server"
path = "src/lib.rs"

[[bin]]
name = "trestle-server"
path = "src/main.rs"
required-features = ["binary"]

[features]
default = []
binary = []

[dependencies]
trestle-core = { path = "../core" }

tokio.workspace = true
axum.workspace = true
axum-extra.workspace = true
tower.workspace = true
tower-http.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
futures.workspace = true
config.workspace = true
uuid.workspace = true
chrono.workspace = true
async-stream.workspace = true

# SQLite 日志存储
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "6"
